# django-template

./: .gitignore  README.md  cookiecutter.json
.github/: dependabot.yml  pull_request_template.md
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .env.example  conftest.py  mypy.ini
{{ cookiecutter.project_slug }}/core/tests/: test_utils.py
{{ cookiecutter.project_slug }}/users/tests/: test_forms.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: settings.py
{{cookiecutter.project_slug_dashed}}/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-ubuntu  README.md  docker-compose-production.yml  docker-compose.override.yml.example  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_slug_dashed}}/.circleci/: README.md  config.yml
{{cookiecutter.project_slug_dashed}}/.github/: pull_request_template.md
{{cookiecutter.project_slug_dashed}}/core/: utils.py
{{cookiecutter.project_slug_dashed}}/users/: forms.py
{{cookiecutter.project_slug_dashed}}/users/api/v1/tests/: test_serializers.py
{{cookiecutter.project_slug_dashed}}/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug_dashed}}/users/tests/: factories.py
{{cookiecutter.project_slug_dashed}}/{{cookiecutter.project_slug_snaked}}/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-ubuntu  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/core/: models.py
{{cookiecutter.project_slug}}/users/api/v1/: serializers.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: settings.py  urls.py
