[tool.poetry]
name = "{{ cookiecutter.project_slug_snaked }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Lorence Lim <jlorencelim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.5"
celery = "^5.3.1"
coreapi = "^2.3.3"
Django = "^4.2.7"
dj-rest-auth = "^5.0.1"
django-allauth = "^0.58.2"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-cors-headers = "^4.3.0"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-redis = "^5.3.0"
django-restql = "^0.15.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-yasg = "^1.21.6"
Pillow = "^10.0.1"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.24.0"
whitenoise = "^6.5.0"

[tool.poetry.dev-dependencies]
black = "^23.12"
coverage = {version = "^7.0", extras = ["toml"]}
django-coverage-plugin = "^3.0.0"
factory-boy = "^3.2.1"
ipdb = "^0.13.13"
pre-commit = "^3.5.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug_snaked }}.settings"


# isort
[tool.isort]
line_length = 88
profile = "black"
known_django = "django"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
multi_line_output = 3
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


# coverage
[tool.coverage.run]
omit = [
    "*migrations*",
    "*tests*",
    "*staticfiles*",
    "*__init__.py",
    "{{ cookiecutter.project_slug_snaked }}/*",
    "conftest.py",
    "manage.py",
]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
omit = [
    "*migrations*",
    "*tests*",
    "*staticfiles*",
    "*__init__.py",
    "{{ cookiecutter.project_slug_snaked }}/*",
    "conftest.py",
    "manage.py",
]
