[tool.poetry]
name = "{{ cookiecutter.project_slug_snaked }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Lorence Lim <jlorencelim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.1"
celery = "^5.3.6"
coreapi = "^2.3.3"
Django = "^4.2.9"
dj-rest-auth = "^5.0.2"
django-allauth = "^0.60.1"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-redis = "^5.4.0"
django-restql = "^0.15.4"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
Pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.24.0"
whitenoise = "^6.6.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
coverage = {version = "^7.4.1", extras = ["toml"]}
django-coverage-plugin = "^3.1.0"
factory-boy = "^3.3.0"
ipdb = "^0.13.13"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"
pytest-factoryboy = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug_snaked }}.settings"


# isort
[tool.isort]
line_length = 88
profile = "black"
known_django = "django"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
multi_line_output = 3
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


# coverage
[tool.coverage.run]
omit = [
    "*migrations*",
    "*tests*",
    "*staticfiles*",
    "*__init__.py",
    "{{ cookiecutter.project_slug_snaked }}/*",
    "conftest.py",
    "manage.py",
]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
omit = [
    "*migrations*",
    "*tests*",
    "*staticfiles*",
    "*__init__.py",
    "{{ cookiecutter.project_slug_snaked }}/*",
    "conftest.py",
    "manage.py",
]
