[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Lorence Lim <jlorencelim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1"
django-allauth = "^0.52.0"
django-cors-headers = "^3.13.0"
django-environ = "^0.8.1"
django-extensions = "^3.2.1"
django-restql = "^0.15.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
dj-rest-auth = "^2.2.6"
drf-yasg = "^1.21.4"
Pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.2.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.12"
coverage = {version = "^7.0", extras = ["toml"]}
django-coverage-plugin = "^3.0.0"
factory-boy = "^3.2.1"
ipdb = "^0.13.11"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.settings"


# isort
[tool.isort]
line_length = 88
profile = "black"
known_django = "django"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
multi_line_output = 3
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


# coverage
[tool.coverage.run]
omit = [
    "*migrations*",
    "*tests*",
    "*staticfiles*",
    "*__init__.py",
    "{{ cookiecutter.project_slug }}/*",
    "conftest.py",
    "manage.py",
]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
omit = [
    "*migrations*",
    "*tests*",
    "*staticfiles*",
    "*__init__.py",
    "{{ cookiecutter.project_slug }}/*",
    "conftest.py",
    "manage.py",
]
